--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <!--font googleapis-->
     <link href="https://fonts.googleapis.com/css?family=Courgette|Quicksand:300,400,700|Satisfy" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <!--favicon-->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <!--font Awesome-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Personal</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="portofolio-body">
-        <div class="portofolio-header"><h2>Ferryal Muhamad Fajar Bahari</h2></div>
+        <div class="portofolio-header">
+          <h2>Ferryal Muhamad Fajar Bahari</h2>
+        </div>
         <div class="slogan">
             <div class="word">
                 <span class="myWord"></span>
-                <div class="cursor "></div>
+                <div class="cursor"></div>
 
             </div>
         </div>
@@ -24,6 +33,47 @@
              <a href="about.html" target="_blank">About</a>
         </div>
     </div>
-
 </body>
+<footer>
+  <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <a class="fo-github" href="https://github.com/ferryal" target="_blank">
+        <i class="fa fa-github fa-2x" ></i>
+      </a>
+    </div>
+    <div class="col-sm">
+      <a  class="fo-twitter" href="https://twitter.com/iyalion" target="_blank">
+        <i class="fa fa-twitter fa-2x" ></i>
+      </a>
+    </div>
+    <div class="col-sm">
+      <a class="fo-instagram" href="https://instagram.com/ferryalfajar" target="_blank">
+        <i class="fa fa-instagram fa-2x"></i>
+      </a>
+    </div>
+    <div class="col-sm">
+      <a class="fo-facebook" href="https://www.facebook.com/ferryal.bahari" target="_blank">
+        <i class="fa fa-facebook fa-2x"></i>
+      </a>
+    </div>
+    <div class="col-sm">
+      <a class="fo-linkedin" href="https://www.linkedin.com/in/ferryalfajar/" target="_blank">
+        <i class="fa fa-linkedin fa-2x"></i>
+      </a>
+    </div>
+      <div class="col-sm">
+        <a class="fo-codepen" href="https://codepen.io/ferryal/" target="_blank">
+          <i class="fa fa-codepen fa-2x"></i>
+        </a>
+      </div>
+      <div class="col-sm">
+        <a class="fo-mail" href="mailto:ferryal21@gmail.com" target="_parent">
+          <i class="fa fa-envelope-o fa-2x"></i>
+        </a>
+      </div>
+
+  </div>
+</div>
+</footer>
 </html>
