--- a/index.html
+++ b/index.html
@@ -23,58 +23,59 @@
   <div class="portofolio-body">
     <div class="portofolio-header">
       <h2>Ferryal Muhamad Fajar Bahari</h2>
-    </div>
-    <div class="slogan">
-      <div class="word">
-        <span class="myWord">Fullstack Web Developer</span>
-        <div class="cursor"></div>
+      <div class="slogan">
+        <div class="word">
+          <span class="myWord"></span>
+          <div class="cursor"></div>
+        </div>
       </div>
-    </div>
-    <div class="links">
-      <a href="about.html" target="_blank">About</a>
+      <div class="links">
+        <a href="about.html" >About</a>
+      </div>
     </div>
   </div>
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <a class="fo-github" href="https://github.com/ferryal" target="_blank">
-              <i class="fa fa-github fa-2x" ></i>
-            </a>
-        </div>
-        <div class="col-sm">
-          <a class="fo-twitter" href="https://twitter.com/iyalion" target="_blank">
-              <i class="fa fa-twitter fa-2x" ></i>
-            </a>
-        </div>
-        <div class="col-sm">
-          <a class="fo-instagram" href="https://instagram.com/ferryalfajar" target="_blank">
-              <i class="fa fa-instagram fa-2x"></i>
-            </a>
-        </div>
-        <div class="col-sm">
-          <a class="fo-facebook" href="https://www.facebook.com/ferryal.bahari" target="_blank">
-              <i class="fa fa-facebook fa-2x"></i>
-            </a>
-        </div>
-        <div class="col-sm">
-          <a class="fo-linkedin" href="https://www.linkedin.com/in/ferryalfajar/" target="_blank">
-              <i class="fa fa-linkedin fa-2x"></i>
-            </a>
-        </div>
-        <div class="col-sm">
-          <a class="fo-codepen" href="https://codepen.io/ferryal/" target="_blank">
-                <i class="fa fa-codepen fa-2x"></i>
+  <footer id="connect" class="mdl-mini-footer">
+    <ul id="fo-links" class="mdl-mini-footer__link_list">
+      <li>
+        <a class="fo-github" href="https://github.com/ferryal" target="_blank">
+                <i class="fa fa-github fa-2x" ></i>
               </a>
-        </div>
-        <div class="col-sm">
-          <a class="fo-mail" href="mailto:ferryal21@gmail.com" target="_parent">
-                <i class="fa fa-envelope-o fa-2x"></i>
+      </li>
+      <li>
+        <a class="fo-twitter" href="https://twitter.com/iyalion" target="_blank">
+                  <i class="fa fa-twitter fa-2x" ></i>
               </a>
-        </div>
-      </div>
-    </div>
+      </li>
+      <li>
+        <a class="fo-instagram" href="https://instagram.com/ferryalfajar" target="_blank">
+                  <i class="fa fa-instagram fa-2x"></i>
+                </a>
+      </li>
+      <li>
+        <a class="fo-facebook" href="https://www.facebook.com/ferryal.bahari" target="_blank">
+                  <i class="fa fa-facebook fa-2x"></i>
+                </a>
+      </li>
+      <li>
+        <a class="fo-linkedin" href="https://www.linkedin.com/in/ferryalfajar/" target="_blank">
+                  <i class="fa fa-linkedin fa-2x"></i>
+                </a>
+      </li>
+      <li>
+        <a class="fo-codepen" href="https://codepen.io/ferryal/" target="_blank">
+                    <i class="fa fa-codepen fa-2x"></i>
+                  </a>
+      </li>
+      <li>
+        <a class="fo-mail" href="mailto:ferryal21@gmail.com" target="_parent">
+                    <i class="fa fa-envelope-o fa-2x"></i>
+                  </a>
+      </li>
+    </ul>
   </footer>
+  <script type="text/javascript" src="./index.js">
+
+  </script>
 </body>
 
 </html>
