update minor a tag visited

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="portofolio-body">
     <div class="portofolio-header">
       <h2>Ferryal Muhamad Fajar Bahari</h2>
-      <div class="slogan">
+      <div id="slogan">
         <div class="word">
           <span class="myWord"></span>
           <div class="cursor"></div>
