--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <div class="portofolio-header">
       <h2>Love modern technology</h2>
       <div id="about">
-        <p>I am jakarta-based soon become fullstack web developer. Let's connect through one of the platform below. </p>
+        <p>I am a jakarta-based soon become fullstack web developer. Let's connect through one of the platform below. </p>
       </div>
       <div class="links">
         <a href="index.html">Home</a>
