--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="links">
-        <a href="about.html" >About</a>
+        <a href="./about.html">About</a>
       </div>
     </div>
   </div>
@@ -74,7 +74,6 @@
     </ul>
   </footer>
   <script type="text/javascript" src="./index.js">
-
   </script>
 </body>
 
