--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--font googleapis-->
-  <link href="https://fonts.googleapis.com/css?family=Courgette|Quicksand:300,400,700|Satisfy" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Courgette|Quicksand:300,400,700|Bellefair" rel="stylesheet">
   <!--bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
@@ -24,10 +24,10 @@
     <div class="portofolio-header">
       <h2>Love modern technology</h2>
       <div id="about">
-        <p>I am a jakarta-based soon become fullstack web developer. Let's connect through one of the platform below. </p>
+        <p>I am a jakarta-based. soon become fullstack web developer. Let's connect through one of the platform below. </p>
       </div>
       <div class="links">
-        <a href="index.html">Home</a>
+        <a id="link-about" href="index.html">Home</a>
       </div>
     </div>
   </div>
@@ -66,6 +66,11 @@
       <li>
         <a class="fo-mail" href="mailto:ferryal21@gmail.com" target="_parent">
                     <i class="fa fa-envelope-o fa-2x"></i>
+                  </a>
+      </li>
+      <li>
+        <a class="fo-camera" href="./gallery.html" target="_blank">
+                    <i class="fa fa-camera-retro fa-2x"></i>
                   </a>
       </li>
     </ul>
